@@ -28,8 +28,8 @@ public class Constants {
         public static  String key;
 
         static {
-                try (BufferedReader bufferedReader = Files.newBufferedReader(Paths.get(".").toAbsolutePath().getParent().resolve("program files").resolve("sizes.txt"))) {
-                //try (BufferedReader bufferedReader = Files.newBufferedReader(Path.of("D:\\NoosferaProgram\\program files\\sizes.txt"))){
+//                try (BufferedReader bufferedReader = Files.newBufferedReader(Paths.get(".").toAbsolutePath().getParent().resolve("program files").resolve("sizes.txt"))) {
+                try  (BufferedReader bufferedReader = Files.newBufferedReader(Path.of("D:\\NoosferaProgram\\program files\\sizes.txt"))){
                         String[] s = bufferedReader.readLine().split(" ");
                         kPhotoVertical = Double.parseDouble(s[0]);
                         kPhotoHorizontal = Double.parseDouble(s[1]);
@@ -37,8 +37,8 @@ public class Constants {
                 } catch (IOException e) {
                         e.printStackTrace();
                 }
-                try (BufferedReader bufferedReader = Files.newBufferedReader(Paths.get(".").toAbsolutePath().getParent().resolve("program files").resolve("shifts.txt"))){
-                //try (BufferedReader bufferedReader = Files.newBufferedReader(Path.of("D:\\NoosferaProgram\\program files\\shifts.txt"))){
+//                try (BufferedReader bufferedReader = Files.newBufferedReader(Paths.get(".").toAbsolutePath().getParent().resolve("program files").resolve("shifts.txt"))){
+                try (BufferedReader bufferedReader = Files.newBufferedReader(Path.of("D:\\NoosferaProgram\\program files\\shifts.txt"))){
                         String []s = bufferedReader.readLine().split(" ");
                         shiftHorizontalPhotoHorizontally = Integer.parseInt(s[0]);
                         shiftHorizontalPhotoVertically = Integer.parseInt(s[1]);
@@ -51,8 +51,8 @@ public class Constants {
                 } catch (IOException e) {
                         e.printStackTrace();
                 }
-                try (BufferedReader bufferedReader = Files.newBufferedReader(Paths.get(".").toAbsolutePath().getParent().resolve("program files").resolve("key.txt"))){
-                //try (BufferedReader bufferedReader = Files.newBufferedReader(Path.of("D:\\NoosferaProgram\\program files\\key.txt"))){
+//                try (BufferedReader bufferedReader = Files.newBufferedReader(Paths.get(".").toAbsolutePath().getParent().resolve("program files").resolve("key.txt"))){
+                try (BufferedReader bufferedReader = Files.newBufferedReader(Path.of("D:\\NoosferaProgram\\program files\\key.txt"))){
                         String []s = bufferedReader.readLine().split(" ");
                         key = s[0];
                 } catch (IOException e) {
@@ -70,33 +70,33 @@ public class Constants {
         public static int widthPhotoHorizontal = (int) (285.0 * kPhotoHorizontal);
         public static int heightPhotoHorizontal = (int) (213.0 * kPhotoHorizontal);
 
-//        public static final Path PATH_PICTURES = Path.of("D:\\NoosferaProgram\\pictures");
-//        public static final Path PATH_TERMO = Path.of("D:\\NoosferaProgram\\pictures\\Termo");
-//        public static final Path PATH_PHOTO = Path.of("D:\\NoosferaProgram\\pictures\\Photo");
-//        public static final Path PATH_PHOTO_HORIZONTAL = Path.of("D:\\NoosferaProgram\\pictures\\Photo\\Horizontal");
-//        public static final Path PATH_TO_SAVED_TERMO = Path.of("D:\\NoosferaProgram\\pictures\\ChangedTermo");
-//        public static final Path PATH_TO_SAVED_PHOTO = Path.of("D:\\NoosferaProgram\\pictures\\ChangedPhoto");
-//        public static final Path PATH_EXCEL_TEMP = Path.of("D:\\NoosferaProgram\\program files\\tempFile.xlsx");
-//        public static final Path PATH_CREATED_PROTOKOL = Path.of("D:\\NoosferaProgram\\Готовый отчет.xlsx");
-//        public static final Path PATH_HEADERS = Path.of("D:\\NoosferaProgram\\Содержание.xlsx");
-//        public static final Path PATH_TABLESPDF = Path.of("D:\\NoosferaProgram\\Новый отчет.pdf");
-//        public static final Path PATH_TABLESXLSX = Path.of("D:\\NoosferaProgram\\Автоочет.xlsx");
+        public static final Path PATH_PICTURES = Path.of("D:\\NoosferaProgram\\pictures");
+        public static final Path PATH_TERMO = Path.of("D:\\NoosferaProgram\\pictures\\Termo");
+        public static final Path PATH_PHOTO = Path.of("D:\\NoosferaProgram\\pictures\\Photo");
+        public static final Path PATH_PHOTO_HORIZONTAL = Path.of("D:\\NoosferaProgram\\pictures\\Photo\\Horizontal");
+        public static final Path PATH_TO_SAVED_TERMO = Path.of("D:\\NoosferaProgram\\pictures\\ChangedTermo");
+        public static final Path PATH_TO_SAVED_PHOTO = Path.of("D:\\NoosferaProgram\\pictures\\ChangedPhoto");
+        public static final Path PATH_EXCEL_TEMP = Path.of("D:\\NoosferaProgram\\program files\\tempFile.xlsx");
+        public static final Path PATH_CREATED_PROTOKOL = Path.of("D:\\NoosferaProgram\\Готовый отчет.xlsx");
+        public static final Path PATH_HEADERS = Path.of("D:\\NoosferaProgram\\Содержание.xlsx");
+        public static final Path PATH_TABLESPDF = Path.of("D:\\NoosferaProgram\\Новый отчет.pdf");
+        public static final Path PATH_TABLESXLSX = Path.of("D:\\NoosferaProgram\\Новый отчет.xlsx");
 
 
 
         // NoosferaProgram
-        public static Path path = Paths.get(".").toAbsolutePath().getParent();
-        public static final Path PATH_PICTURES = path.resolve("pictures");
-        public static final Path PATH_TERMO = path.resolve("pictures").resolve("Termo");
-        public static final Path PATH_PHOTO = path.resolve("pictures").resolve("Photo");
-        public static final Path PATH_PHOTO_HORIZONTAL = path.resolve("pictures").resolve("Photo").resolve("Horizontal");
-        public static final Path PATH_TO_SAVED_TERMO = path.resolve("pictures").resolve("ChangedTermo");
-        public static final Path PATH_TO_SAVED_PHOTO = path.resolve("pictures").resolve("ChangedPhoto");
-        public static final Path PATH_EXCEL_TEMP = path.resolve("program files").resolve("tempFile.xlsx");
-        public static final Path PATH_CREATED_PROTOKOL = path.resolve("Готовый отчет.xlsx");
-        public static final Path PATH_HEADERS = path.resolve("Содержание.xlsx");
-        public static final Path PATH_TABLESPDF = path.resolve("Новый отчет.pdf");
-        public static final Path PATH_TABLESXLSX = path.resolve("Автоочет.xlsx");
+//        public static Path path = Paths.get(".").toAbsolutePath().getParent();
+//        public static final Path PATH_PICTURES = path.resolve("pictures");
+//        public static final Path PATH_TERMO = path.resolve("pictures").resolve("Termo");
+//        public static final Path PATH_PHOTO = path.resolve("pictures").resolve("Photo");
+//        public static final Path PATH_PHOTO_HORIZONTAL = path.resolve("pictures").resolve("Photo").resolve("Horizontal");
+//        public static final Path PATH_TO_SAVED_TERMO = path.resolve("pictures").resolve("ChangedTermo");
+//        public static final Path PATH_TO_SAVED_PHOTO = path.resolve("pictures").resolve("ChangedPhoto");
+//        public static final Path PATH_EXCEL_TEMP = path.resolve("program files").resolve("tempFile.xlsx");
+//        public static final Path PATH_CREATED_PROTOKOL = path.resolve("Готовый отчет.xlsx");
+//        public static final Path PATH_HEADERS = path.resolve("Содержание.xlsx");
+//        public static final Path PATH_TABLESPDF = path.resolve("Новый отчет.pdf");
+//        public static final Path PATH_TABLESXLSX = path.resolve("Новый отчет.xlsx");
 
 
 
